--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h1>I Nostri Scatti</h1>
+                <h1>Social</h1>
             </div>
         </div>
         <div class="row">
@@ -177,7 +177,7 @@
                 <p>Sei social?</p>
                 <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code>.</p>
                 <!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
-                <a role="button" href="http://www.beerstrot.it/social/">Guarda le Foto &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/social/">Guarda le Foto e i Post &rarr;</a>
             </div>
         </div>
     </div>
