--- a/social/index.html
+++ b/social/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Social | I Nostri Scatti</title>
-    <meta name="description" content="I Nostri Scatti di Ca' Vecchia Beerstrot"/>
+    <title>Beerstrot | Social | Post e Foto</title>
+    <meta name="description" content="Post e Foto su Ca' Vecchia Beerstrot"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Beerstrot | Social | I Nostri Scatti"/>
-    <meta name="twitter:description" content="I Nostri Scatti di Ca' Vecchia Beerstrot"/>
+    <meta name="twitter:title" content="Beerstrot | Social | Post e Foto"/>
+    <meta name="twitter:description" content="Post e Foto su Ca' Vecchia Beerstrot"/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/medium/social.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/social/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/social/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Beerstrot | Social | I Nostri Scatti"/>
-    <meta property="og:description" content="I Nostri Scatti di Ca' Vecchia Beerstrot"/>
+    <meta property="og:title" content="Beerstrot | Social | Post e Foto"/>
+    <meta property="og:description" content="Post e Foto su Ca' Vecchia Beerstrot"/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/medium/social.jpg"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
@@ -75,7 +75,8 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>I Nostri Scatti</h1>
+            <h1>Social</h1>
+            <br>
         </div>
     </header>
 <!-- tab post inizio-->
