--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <h1>Orari</h1>
+                <p>CHIUSI PER FERIE. RIAPRIAMO IL 18 GENNAIO 2018</p>
             </div>
         </div>
         <div class="row">
