--- a/menu/index.html
+++ b/menu/index.html
@@ -436,15 +436,19 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per i Dessert 6cl.</h2>
+                    <h2 class="subheader">Per i Dessert</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Nero Visciola &emsp;3,5</h3>
+                            <h3>Nero Visciola &emsp;3,5 / 19</h3>
                             <p>antinori</p>
                         </li>
                         <li>
-                            <h3>Baladin Xyauyu &emsp;4,5</h3>
-                            <p>birra invecchiata in botti di madeira</p>
+                            <h3>Sante Lancerio Passito &emsp;4,5 / 25</h3>
+                            <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Xyauyu &emsp;4,5 / 25</h3>
+                            <p>baladin</p>
                         </li>
                     </ul>
                 </div>
