--- a/menu/index.html
+++ b/menu/index.html
@@ -115,16 +115,20 @@
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
-                            <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
+                            <h3>Terrina di Pecorino Fuso &emsp; 5</h3>
+                            <p>con grani di pepe nero</p>
                         </li>
                         <li>
                             <h3>Olive all'Ascolana &emsp; 5</h3>
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Dadolata &emsp; 4,5</h3>
-                            <p>cubetti di zucca e ceci con spezie</p>
+                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
+                        </li>
+                        <li>
+                            <h3>Polentine &emsp; 5,5</h3>
+                            <p>con baccalà mantecato</p>
                         </li>
                         <li>
                             <h3>Anelli di Cipolla &emsp; 4,5</h3>
@@ -135,15 +139,12 @@
                             <p>tortillas, cheddar, peperoncino fresco</p>
                         </li>
                         <li>
-                            <h3>Hummus &emsp; 5</h3>
-                            <p>hummus di ceci e zucca, servito con tortillas</p>
+                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
+                            <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>
                             <p>patate fritte con buccia</p>
-                        </li>
-                        <li>
-                            <h3>Zuppa di Stagione &emsp; 3,5</h3>
                         </li>
                     </ul>
                 </div>
@@ -161,16 +162,16 @@
                             <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
+                            <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
+                            <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
+                        </li>
+                        <li>
                             <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Emiliano &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, parmigiano 36 mesi, rucola, aceto balsamico tradizionale di modena</p>
-                        </li>
-                        <li>
-                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, montasio DOP, crema di porcini, speck croccante</p>
+                            <h3>Inverno &emsp; 10,5 / doppio 14,9</h3>
+                            <p>180 grammi di manzo, fonduta di formaggi, speck croccante, radicchio spadellato</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
@@ -208,7 +209,7 @@
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Cotoletta alla Milanese &emsp; 20</h3>
+                            <h3>Cotoletta alla Milanese &emsp; 19</h3>
                             <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
                         </li>
                         <li>
@@ -224,8 +225,8 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Blondie &emsp; 5</h3>
-                                <p>brownie di cioccolato e nocciole <br>servito con crema di mascarpone</p>
+                                <h3>Tenerina &emsp; 5</h3>
+                                <p>servita con crema di mascarpone</p>
                             </li>
                             <li>
                                 <h3>Birramisù &emsp; 5</h3>
