--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     </header>
 <!-- fine header -->
     <div class="panel-home-n">
-        <!-- <div class="row">
+        <div class="row">
             <div class="medium-12 large-12 columns">
                 <h1>Orari</h1>
-                <p>CHIUSI PER FERIE. RIAPRIAMO IL 18 GENNAIO 2018</p>
+                <!-- <p>CHIUSI PER FERIE. RIAPRIAMO IL 18 GENNAIO 2018</p> -->
             </div>
-        </div> -->
+        </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <h2>Ca' Vecchia Beerstrot</h2>
