--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
                     </div>
                 </div>
             </div>
-            <div class="small-6 medium-3 large-3 columns">
+            <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
+                <meta itemprop="paymentAccepted" content="Cash, Credit Card"/>
                 <h4 class="subheader">Accettiamo</h4>
                 <ul class="block-grid-cards-3">
                     <li>
