--- a/menu/index.html
+++ b/menu/index.html
@@ -115,20 +115,16 @@
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Terrina di Pecorino Fuso &emsp; 5</h3>
-                            <p>con grani di pepe nero</p>
-                        </li>
-                        <li>
                             <h3>Olive all'Ascolana &emsp; 5</h3>
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
-                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
+                            <h3>Mozzarelle fritte &emsp; 5,5</h3>
+                            <p>fior di latte</p>
                         </li>
                         <li>
-                            <h3>Polentine &emsp; 5,5</h3>
-                            <p>con baccalà mantecato</p>
+                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
                             <h3>Anelli di Cipolla &emsp; 4,5</h3>
@@ -166,20 +162,20 @@
                             <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
                         </li>
                         <li>
-                            <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>
+                            <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Inverno &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, fonduta di formaggi, speck croccante, radicchio spadellato</p>
+                            <h3>Primavera 8 &emsp; 8,9 / doppio 14,9</h3>
+                            <p>180 grammi di manzo, composta di feta, pomodorini e timo, valeriana</p>
+                        </li>
+                        <li>
+                            <h3>Campagnolo &emsp; 10,5 / doppio 14,9</h3>
+                            <p>180 grammi di manzo, pecorino fresco, guanciale, asparagi al vapore</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
-                        </li>
-                        <li>
-                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, gorgonzola, crema di zucca, speck croccante</p>
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>
@@ -197,7 +193,7 @@
                     <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Costine &emsp; 11,5</h3>
+                            <h3>Costine &emsp; 12,9</h3>
                             <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                         </li>
                         <li>
@@ -231,6 +227,10 @@
                             <li>
                                 <h3>Birramisù &emsp; 5</h3>
                                 <p>tiramisù alla birra stout</p>
+                            </li>
+                            <li>
+                                <h3>Millefoglie &emsp; 5</h3>
+                                <p>millefoglie alla crema di gianduia e nocciole</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
