--- a/menu/index.html
+++ b/menu/index.html
@@ -120,7 +120,7 @@
                         </li>
                         <li>
                             <h3>Mozzarelle fritte &emsp; 5,5</h3>
-                            <p>fior di latte</p>
+                            <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
                             <h3>Peperoncini Piccanti &emsp; 4,5</h3>
