--- a/menu/index.html
+++ b/menu/index.html
@@ -166,7 +166,7 @@
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Primavera 8 &emsp; 8,9 / doppio 14,9</h3>
+                            <h3>Primavera &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di manzo, composta di feta, pomodorini e timo, valeriana</p>
                         </li>
                         <li>
