--- a/asporto/index.html
+++ b/asporto/index.html
@@ -132,8 +132,8 @@
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Mozzarelle fritte &emsp; 5,5</h3>
-                            <p>fior di latte</p>
+                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
+                            <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
                             <h3>Peperoncini Piccanti &emsp; 4,5</h3>
@@ -239,11 +239,11 @@
                             </li>
                             <li>
                                 <h3>Millefoglie &emsp; 5</h3>
-                                <p>millefoglie alla crema di gianduia e nocciole</p>
+                                <p>alla crema di gianduia e nocciole</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
-                                <p>cheesecake stile new york</p>
+                                <p>stile new york</p>
                             </li>
                         </ul>
                     </div>
