--- a/menu/index.html
+++ b/menu/index.html
@@ -119,7 +119,7 @@
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Mozzarelle fritte &emsp; 5,5</h3>
+                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
                             <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
@@ -230,19 +230,19 @@
                             </li>
                             <li>
                                 <h3>Millefoglie &emsp; 5</h3>
-                                <p>millefoglie alla crema di gianduia e nocciole</p>
+                                <p>alla crema di gianduia e nocciole</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
-                                <p>cheesecake stile new york</p>
+                                <p>stile new york</p>
                             </li>
                             <li>
                                 <h3>Crumble &emsp; 5</h3>
-                                <p>crumble con crema pasticcera e scaglie di cioccolato</p>
+                                <p>con crema pasticcera e scaglie di cioccolato</p>
                             </li>
                             <li>
                                 <h3>Vino di Visciola e Biscotti &emsp; 5</h3>
-                                <p>vino di visciola servito con anicette e cantucci artigianali</p>
+                                <p>vino di visciola servito con anicetti e cantucci artigianali</p>
                             </li>
                         </ul>
                         <blockquote>
