--- a/asporto/index.html
+++ b/asporto/index.html
@@ -206,19 +206,15 @@
                     <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Costine &emsp; 12,9</h3>
+                            <h3>Costine &emsp; 13,9</h3>
                             <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
-                        </li>
-                        <li>
-                            <h3>Gulasch &emsp; 10,5</h3>
-                            <p>spezzatino di manzo e patate <br>servito in pagnotta</p>
                         </li>
                         <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Cotoletta alla Milanese &emsp; 19</h3>
+                            <h3>Cotoletta alla Milanese &emsp; 21</h3>
                             <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
                         </li>
                         <li>
@@ -234,8 +230,8 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Tenerina &emsp; 5</h3>
-                                <p>servita con crema di mascarpone</p>
+                                <h3>Blondie &emsp; 5</h3>
+                                <p>brownie servito con crema di mascarpone</p>
                             </li>
                             <li>
                                 <h3>Millefoglie &emsp; 5</h3>
