--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Birra Artigianale e Cibo Divino"/>
     <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.gif"/>
+    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
