--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-from-tabs"><i class="fi-telephone"></i> Prenota</a><br><br></span>
             </div>
-            <div class="medium-6 large-6 columns">
+            <!-- <div class="medium-6 large-6 columns">
                 <h2>Casetta sull'Aia</h2>
                 <p><strong>Venerdì</strong> e <strong>Sabato</strong><br>Dalle <strong>20:00</strong> alle <strong>01:00</strong></p>
                 <a role="button" href="http://www.beerstrot.it/eventi/beerstrot-birreria.html">Scopri la Casetta sull'Aia &rarr;</a>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="panel-home-2n">
