--- a/asporto/index.html
+++ b/asporto/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="row show-for-small">
             <div class="medium-12 large-12 columns">
-                <a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a>
+                <br><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a>
             </div>
         </div>
         <div class="row">
