--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Sei social?</p>
-                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code>.</p>
+                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#cavecchiabeerstrot</code>.</p>
                 <!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
                 <a role="button" href="http://www.beerstrot.it/social/">Guarda le Foto e i Post &rarr;</a>
             </div>
