--- a/menu/index.html
+++ b/menu/index.html
@@ -127,13 +127,17 @@
                             <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
-                            <h3>Anelli di Cipolla &emsp; 4,5</h3>
-                            <p>cipolla gialla impanata e fritta</p>
+                            <h3>Cipolla Fritta &emsp; 4,5</h3>
+                            <p>anelli di cipolla dorata impanati</p>
                         </li>
                         <li>
+                            <h3>Ratatouille &emsp; 4,5</h3>
+                            <p>verdura fresca tagliata a dadi e cotta al forno</p>
+                        </li>
+                        <!-- <li>
                             <h3>Nachos Supreme &emsp; 5,5</h3>
                             <p>tortillas, cheddar, peperoncino fresco</p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
                             <p>servite con salse del Beerstrot</p>
@@ -147,15 +151,15 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
+                    <h2 class="subheader">Hamburger (180 grammi)<br><small>Servito con patate fritte. Cottura media.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 / 360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                            <p>manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
                             <h3>New York &emsp; 8,9 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
+                            <p>manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <!-- <li>
                             <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
@@ -163,27 +167,35 @@
                         </li> -->
                         <li>
                             <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                            <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Primavera &emsp; 8,9 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, composta di feta, pomodorini e timo, valeriana</p>
+                            <h3>Estivo &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
                         </li>
                         <li>
-                            <h3>Campagnolo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, pecorino fresco, guanciale, asparagi al vapore</p>
+                            <h3>Greco &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, melanzana grigliata, julienne di iceberg, salsa tzatziki</p>
+                        </li>
+                        <li>
+                            <h3>Pulled Pork &emsp; 9,5</h3>
+                            <p>spalla di maiale sfilacciata, cheddar, coleslow, cetriolini, salsa piccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
-                            <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                            <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                        </li>
+                        <li>
+                            <h3>Cacciatore &emsp; 10,5 / doppio 14,9</h3>
+                            <p>pollo, bacon, peperoni stufati, crema di peperoni</p>
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>
-                            <p>hamburger di borlotti, pesto di pinoli e cavolo nero, julienne di cipolla fritta</p>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di zucchine e menta</p>
                         </li>
                         <li>
-                            <h3>Mini Burger &emsp; 6</h3>
-                            <p>100 grammi di manzo, cheddar</p>
+                            <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
+                            <p>manzo, cheddar</p>
                         </li>
                     </ul>
                 </div>
@@ -194,7 +206,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine &emsp; 13,9</h3>
-                            <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
+                            <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
                         </li>
                         <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>
@@ -417,15 +429,15 @@
                     <h2 class="subheader">Vino in Bottiglia</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Libenter Rosso Piceno &emsp;14</h3>
+                            <h3>Libenter Rosso Piceno &emsp;15</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Misco Verdicchio Jesi &emsp;14</h3>
+                            <h3>Misco Verdicchio Jesi &emsp;15</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Prosecco Extra Dry &emsp;14</h3>
+                            <h3>Prosecco Extra Dry &emsp;15</h3>
                             <p>bervini</p>
                         </li>
                     </ul>
@@ -440,12 +452,8 @@
                             <p>antinori</p>
                         </li>
                         <li>
-                            <h3>Sante Lancerio Passito &emsp;4,5 / 25</h3>
+                            <h3>Sante Lancerio Passito &emsp;4,5</h3>
                             <p>tavignano</p>
-                        </li>
-                        <li>
-                            <h3>Xyauyu &emsp;4,5 / 25</h3>
-                            <p>baladin</p>
                         </li>
                     </ul>
                 </div>
