--- a/asporto/index.html
+++ b/asporto/index.html
@@ -192,7 +192,7 @@
                         </li>
                         <li>
                             <h3>Pulled Pork &emsp; 9,5</h3>
-                            <p>spalla di maiale sfilacciata, cheddar, coleslow, cetriolini, salsa piccante</p>
+                            <p>spalla di maiale sfilacciata, coleslow, cetriolini, salsa piccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
