--- a/asporto/index.html
+++ b/asporto/index.html
@@ -93,7 +93,8 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4><!-- Dal <strong>Giovedì</strong> alla <strong>Domenica</strong> -->Tutti i giorni.<br>Dalle <strong>19:00</strong> alle <strong>20:00</strong></h4>
+                <h4><!-- Dal <strong>Giovedì</strong> alla <strong>Domenica</strong> -->Dal Lunedi al Giovedì.<br>Dalle <strong>19:00</strong> alle <strong>20:00</strong></h4>
+                <h4><!-- Dal <strong>Giovedì</strong> alla <strong>Domenica</strong> -->Sabato e Domenica.<br>Dalle <strong>19:00</strong> alle <strong>19:30</strong></h4>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
             </div>
             <div class="medium-6 large-6 columns">
