--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <h2>Ca' Vecchia Beerstrot</h2>
-                <p>Dal <strong>1 Giugno</strong> al <strong>31 Agosto</strong> siamo aperti <strong>tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
-                <!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p> -->
+                <!-- <p>Dal <strong>1 Giugno</strong> al <strong>31 Agosto</strong> siamo aperti <strong>tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p> -->
+                <p>Dal <strong>Mercoledì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-from-tabs"><i class="fi-telephone"></i> Prenota</a></span>
             </div>
@@ -286,11 +286,10 @@
             </div>
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
-                 <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
+                 <meta itemprop="openingHours" content="We, Th, Fr, Sa, Su 19:00-23:00">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <p>Tutti i Giorni<br>Dalle 19:00 alle 23:00</p>
-
+                        <p>Dal Mercoledì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                     </div>
                 </div>
             </div>
