--- a/eventi/index.html
+++ b/eventi/index.html
@@ -69,7 +69,7 @@
     </header>
     <div class="row">
         <div class="medium-12 large-12 columns">
-            <article class="row">
+            <!-- <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">18 Nov 2017</h3>
                     <h5>Dalle 20:00 alle 01:00</h5>
@@ -88,7 +88,7 @@
                 <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
                     <hr>
                 </div>
-            </div>
+            </div> -->
             <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Dic 2016</h3>
